--- a/css/style.css
+++ b/css/style.css
@@ -12,10 +12,6 @@
   }
   
   body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
     font-size: 1.5rem;
     font-family: 'Lexend Deca', sans-serif;
     font-weight: 400;
@@ -23,10 +19,14 @@
   }
 
   main {
-      display: flex;
-      width: 90%;
-      max-width: 920px;
-      height: 500px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    width: 90%;
+    max-width: 920px;
+    height: 500px;
   }
 
   h2 {
@@ -37,7 +37,7 @@
   }
 
   p {
-      line-height: 1.5;
+      line-height: 1.6;
   }
 
   h2,
@@ -49,61 +49,66 @@
       display: flex;
       flex-direction: column;
       padding: 4.7rem 5.2rem 4.7rem 4.8rem;
+      height: 500px;
   }
 
   .category:first-child {
-      border-radius: 10px 0 0 10px;
+      border-radius: 8px 0 0 8px;
   }
 
   .category:last-child {
-    border-radius: 0 10px 10px 0;
+    border-radius: 0 8px 8px 0;
 }
 
-  .category a {
-      margin-top: auto;
-      text-decoration: none;
-      background-color: #fff;
-      width: fit-content;
-      padding: 1.7rem 3rem;
-      border-radius: 100px;
-  }
+.category a {
+    margin-top: auto;
+    text-decoration: none;
+    background-color: #fff;
+    width: fit-content;
+    padding: 1.7rem 3rem;
+    border-radius: 100px;
+}
 
-  .category a:hover,
-  .category a:active {
-      background-color: transparent;
-      box-shadow: inset 0 0 0 2px #fff;
-      color: currentColor;
-  }
+.category a:hover,
+.category a:active {
+    background-color: transparent;
+    box-shadow: inset 0 0 0 2px #fff;
+    color: currentColor;
+    cursor: pointer;
+}
 
-  .category img {
-    width: 64px;
-  }
+.category img {
+width: 64px;
+}
 
-  .sedan {
-      background-color: hsl(31, 77%, 52%);
-  }
+.sedan {
+    background-color: hsl(31, 77%, 52%);
+}
 
-  .sedan a {
-      color: hsl(31, 77%, 52%);;
-  }
+.sedan a {
+    color: hsl(31, 77%, 52%);;
+}
 
-<<<<<<< Updated upstream
-  .suv {
-      background-color: hsl(184, 100%, 22%);
-  }
+.suv {
+    background-color: hsl(184, 100%, 22%);
+}
 
-  .suv a {
-      color:hsl(184, 100%, 22%);
-  }
+.suv a {
+    color:hsl(184, 100%, 22%);
+}
 
-  .luxury {
-      background-color: hsl(179, 100%, 13%);
-  }
+.luxury {
+    background-color: hsl(179, 100%, 13%);
+}
 
-  .luxury a {
-      color: hsl(179, 100%, 13%);
-  }
-=======
+.luxury a {
+    color: hsl(179, 100%, 13%);
+}
+
+/* media queries */
+
+  @media screen and (max-width: 600px) {
+
     main {
         height: 100%;
         flex-direction: column;
@@ -159,7 +164,6 @@
     .category:first-child {
         border-radius: 8px 8px 0 0;
     }
->>>>>>> Stashed changes
   
     .category:last-child {
       border-radius: 0 0 8px 8px;
