--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,7 @@
     width: fit-content;
     padding: 1.7rem 3rem;
     border-radius: 100px;
+    transition: all .1s ease-in;
 }
 
 .category a:hover,
@@ -75,6 +76,14 @@
     box-shadow: inset 0 0 0 2px #fff;
     color: currentColor;
     cursor: pointer;
+}
+
+.category a:hover {
+    transform: translateY(-1px);
+}
+
+.category a:active {
+    transform: translateY(1px);
 }
 
 .category img {
@@ -169,4 +178,32 @@ width: 64px;
       border-radius: 0 0 8px 8px;
   }
 
+}
+
+/* Animations */
+
+
+.category > * {
+    animation-name: fadeIn;
+    animation-delay: .5s;
+    animation-duration: 1s;
+    animation-timing-function: ease-in-out;
+    animation-fill-mode: both;
+}
+
+.animation-1 > * {
+    animation-delay: .8s;
+}
+
+.animation-2 > * {
+    animation-delay: 1.2s;
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
