--- a/css/style.css
+++ b/css/style.css
@@ -184,26 +184,26 @@ width: 64px;
 
 main {
     animation-name: fadeIn;
-    animation-delay: .1s;
-    animation-duration: .3s;
+    animation-delay: .4s;
+    animation-duration: .7s;
     animation-timing-function: ease-in-out;
-    animation-fill-mode: both;
+    animation-fill-mode: backwards;
 } 
 
 .category > * {
     animation-name: fadeIn;
-    animation-delay: .4s;
+    animation-delay: .9s;
     animation-duration: 1s;
     animation-timing-function: ease-in-out;
     animation-fill-mode: both;
 }
 
 .animation-1 > * {
-    animation-delay: .8s;
+    animation-delay: 1.3s;
 }
 
 .animation-2 > * {
-    animation-delay: 1.2s;
+    animation-delay: 1.7s;
 }
 
 @keyframes fadeIn {
