--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@
     font-family: 'Lexend Deca', sans-serif;
     font-weight: 400;
     color: hsla(0, 0%, 100%, 0.75);
+    background-color: #f2f2f2;
   }
 
   main {
