--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,7 @@ width: 64px;
 
   @media screen and (max-width: 600px) {
 
+
     main {
         height: 100%;
         flex-direction: column;
@@ -180,12 +181,16 @@ width: 64px;
       border-radius: 0 0 8px 8px;
   }
 
+  .attribution {
+    visibility: hidden;
+}
+
 }
 
 @media screen and (min-width: 601px) and (max-width: 850px) {
 
     main {
-        height: 100%;
+        height: 100vh;
         margin: 100px auto;
         flex-direction: column;
     }
@@ -215,9 +220,11 @@ width: 64px;
       border-radius: 0 0 8px 8px;
   }
 
+  .attribution {
+      visibility: hidden;
+  }
+
 }
-
-
 
 /* Attribution styles */
 
