--- a/css/style.css
+++ b/css/style.css
@@ -29,11 +29,11 @@
     max-width: 920px;
     height: 500px;
 
-    /* animation-name: fadeIn;
+    animation-name: fadeIn;
     animation-delay: .4s;
     animation-duration: .7s;
     animation-timing-function: ease-in-out;
-    animation-fill-mode: backwards; */
+    animation-fill-mode: backwards;
 
   }
 
@@ -101,11 +101,11 @@ width: 64px;
 }
 
 .category > * {
-    /* animation-name: fadeIn;
+    animation-name: fadeIn;
     animation-delay: .9s;
     animation-duration: 1s;
     animation-timing-function: ease-in-out;
-    animation-fill-mode: both; */
+    animation-fill-mode: both;
 }
 
 .animation-1 > * {
